--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,52 @@ footer{
       z-index: -99;
 }
 }
+
+@media screen and (prefers-reduced-motion: reduce) {
+  #logo {
+    animation: none; 
+  }
+}
+
+@media print {
+
+  .class {
+    display: inline; 
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  body {
+    background-image: none;
+    background-color: #ffffff; 
+  }
+
+  nav {
+   width: 100%;
+   justify-content: space-around; 
+  }
+
+  .nav_links {
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .gallery, #gallery {
+    display: none;
+  }
+  
+  .card {
+    border: 2px solid #45ADDD; 
+    flex-basis: 250px; 
+  }
+
+  .pricing {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+}
