--- a/css/style.css
+++ b/css/style.css
@@ -1,117 +1,59 @@
-body{
-  margin: 0;
-  padding: 0;
-  font-size: 16pt; /* test for this! Make all sizes em or rem */
+body {
+  font-family: 'Alegreya Sans SC', serif; 
+  background-image: url("../images/concrete_seamless.png");
+  background-color: #f1f1f1; 
 }
 
-header{
-  background: #fff;
-  border-bottom: 3px solid #50C7C7;
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: static; 
+}
+  
+a:link, a:visited {
+  color: #0000EE;
 }
 
-h1{
-  font-size: 2em;
-  text-align: center;
-  line-height: 2;
+.nav_links {
+  display: flex;
+  flex-direction: column;
 }
 
-h2{
-  font-size: 1.5em;
-  text-align: center;
-  padding: 5px;
+.card{
+  flex-basis: 450px;
 }
 
-p {
-  padding: 0 30px;
+.card > header {
+  background-color: #288088;
+  border: 2px solid #45ADAD; 
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 7px 7px 0 0;
 }
 
-a.skip{
-  background: white;
-  left: 0;
-  padding: 6px;
-  position: absolute;
-  top: -40px;
-  -webkit-transition: top 1s ease-out;
-  transition: top 1s ease-out;
-  z-index: 1;
+.pricing {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
+  align-items: center; 
 }
 
-a.skip:focus{
-  top:20px;
-  color: black;
-  text-decoration-style: solid;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-*:focus{
-  border: 2px solid black;
+.gallery > img {
+  border: 10px solid #50C7C7;
+  margin: 10px;
+  width: 300px; 
 }
 
-
-.nav_item a{
-  padding: 10px;
-}
-
-.nav_item a:hover, a:focus{
-  color: #50C7C7;
-  text-decoration: underline;
-  -webkit-text-decoration-style: dotted;
-          text-decoration-style: dotted;
-}
-
-.pricing{
-  min-height: 475px;
-}
-
-.card {
-  margin: 12px;
-  background: #fff;
-  border-radius: 7px;
-  padding: 0 0 25px 0;
-
-}
-
-.card > ul{
-  list-style: none;
-  padding-left: 5px;
-}
-
-.card > ul li {
-  width: 90%;
-  margin: 20px auto;
-
-}
-
-.card button{
-  width: 90%;
-  height: 40px;
-  border: 0;
-  margin-left: 5%;
-  border-radius: 7px;
-  background: #288080;
-  color: white;
-  font-size: 1em;
-}
-
-.card h3{
-  font-size: 4em;
-  color: white;
-  text-align: center;
-}
-
-.card_big{
-  -webkit-transform: initial;
-          transform: initial;
-}
-
-.gallery{
-  min-height: 600px;
-}
-
-footer{
-  background-color: black;
-  color: white;
-  padding: 30px;
-  text-align: center;
+#logo {
+  animation-duration: 5s;
+  animation-name: grow;
 }
 
 @media screen and (min-width: 850px){
